--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+/* body */
+body {
+    background-color: rgba(1, 1, 7, 0.795)
+}
+
+
 /* navbar */
 .navbar-brand img {
     width: 45px;
@@ -23,7 +29,33 @@
 }
 
 .carousel-caption {
-    postion: absolute;
+    position: absolute;
     top: 10%;
     text-shadow: 0 0 3px #000000, 0 0 5px #000008;
+}
+
+/* about us section */
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.aboutus {
+    font-size: 1.2em;
+    padding: 18px;
+    margin-bottom: 38px;
+    margin-top: 32px;
+    text-align: center;
+    border: 4px solid rgb(255, 115, 0);
+    position: relative;
+
+
+}
+
+.aboutus>p {
+    text-align: center;
+    font-size: 1.1rem;
+    line-height: 2rem;
+
 }
