--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 .aboutus {
@@ -58,4 +62,33 @@ body {
     font-size: 1.1rem;
     line-height: 2rem;
 
+}
+
+/* upcoming shows */
+.shows-container {
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+
+.shows-header {
+    padding-top: 40px;
+    padding-bottom: 60px;
+    color: #ffffff;
+    letter-spacing: 4px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: xxx-large;
+    font-weight: 600;
+    position: center;
+}
+
+.upcoming-shows {
+    padding-bottom: 100px;
+}
+
+.showname {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    color: #ffffff;
+    font-weight: 600;
 }
