--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
 /* body */
+
 body {
     background-color: rgba(1, 1, 7, 0.795)
 }
 
 
 /* navbar */
+
 .navbar-brand img {
     width: 45px;
     height: 45px;
@@ -18,6 +20,7 @@ body {
 }
 
 /* hero image carousel*/
+
 .c-item {
     height: 720px;
 }
@@ -35,14 +38,12 @@ body {
 }
 
 /* about us section */
+
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
-    -ms-overflow-style: none;
-    /* Internet Explorer 10+ */
-    scrollbar-width: none;
-    /* Firefox */
+
 }
 
 .aboutus {
@@ -65,6 +66,7 @@ body {
 }
 
 /* upcoming shows */
+
 .shows-container {
     margin-top: 35px;
     margin-bottom: 35px;
@@ -98,6 +100,8 @@ body {
     background-color: #FF5500;
     border-color: #000000;
 }
+
+/* upcoming shows button */
 
 .btn-primary:hover,
 .btn-primary:focus,
