--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,9 @@
 
 body {
     background-color: rgba(1, 1, 7, 0.795);
-    overflow-x:hidden;
+    overflow-x: hidden;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 
@@ -18,6 +20,10 @@ body {
     align-items: center;
     font-weight: 700;
 
+}
+
+.navbar-toggler {
+    margin-right: 10px;
 }
 
 /* hero image carousel*/
@@ -82,7 +88,6 @@ body {
     text-align: center;
     font-size: xxx-large;
     font-weight: 600;
-    position: center;
 }
 
 .upcoming-shows {
@@ -143,4 +148,3 @@ fieldset[disabled] .btn-primary.active {
     color: #FF5500;
     background-color: #FFFFFF;
 }
-
