--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,9 +267,41 @@ fieldset[disabled] .btn-primary.active {
 /* comedians page title */
 
 .main-title {
-    padding: 100px 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     font-size: 50px;
     font-weight: 700;
     text-transform: uppercase;
     text-shadow: 0 0 3px #000000;
+    text-align: center;
+}
+
+.comedian-container {
+    padding-bottom: 50px;
+}
+
+.comedian-image {
+    float: left;
+}
+
+.comedian-bio-container {
+    width: 450px;
+    height: 235px;
+}
+
+.comedian-name {
+    font-size: 25px;
+    color: #FF5500;
+    font-weight: bolder;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.comedian-bio {
+    height: 185px;
+    color: white;
+    text-align: justify;
+    padding-left: 30px;
+    padding-right: 30px;
+
 }
