Add pictures and bio for all the comedians.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,6 +293,7 @@ fieldset[disabled] .btn-primary.active {
     font-size: 25px;
     color: #FF5500;
     font-weight: bolder;
+    padding-top:5px;
     padding-bottom: 20px;
     text-align: center;
 }
