--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,13 +143,14 @@ fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary.active {
     background-color: #FF5500;
     border-color: #000000;
- 
+
 }
 
 .btn-primary .badge {
     color: #FF5500;
     background-color: #FFFFFF;
 }
+
 /* newsletter signup form */
 
 .newsletter-container {
@@ -294,7 +295,7 @@ fieldset[disabled] .btn-primary.active {
     font-size: 25px;
     color: #FF5500;
     font-weight: bolder;
-    padding-top:5px;
+    padding-top: 5px;
     padding-bottom: 20px;
     text-align: center;
 }
@@ -310,18 +311,77 @@ fieldset[disabled] .btn-primary.active {
 
 /* go to top button */
 .gotopbtn {
-    position:fixed;
-    width:50px;
-    height:50px;
-    background:#FF5500;
-    bottom:40px;
-    right:20px;
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background: #FF5500;
+    bottom: 40px;
+    right: 20px;
     text-decoration: none;
-    text-align:center;
+    text-align: center;
     line-height: 50px;
-    color:white;
-    font-size:20px;
+    color: white;
+    font-size: 20px;
 
 }
 
 /* contact page */
+#contact {
+    letter-spacing: 2px;
+}
+
+.text-area {
+    padding-top: 10px;
+}
+
+.span-text {
+    padding-left: 5px;
+}
+
+@media (max-width: 575.98px) {
+
+    #contact {
+        padding-bottom: 400px;
+    }
+
+    #contact .maps iframe {
+        width: 100%;
+        height: 450px;
+    }
+}
+
+
+@media (min-width: 576px) {
+
+    #contact {
+        padding-bottom: 400px;
+    }
+
+    #contact .maps iframe {
+        width: 100%;
+        height: 450px;
+    }
+}
+
+@media (min-width: 768px) {
+
+    #contact {
+        padding-bottom: 300px;
+    }
+
+    #contact .maps iframe {
+        width: 100%;
+        height: 850px;
+    }
+}
+
+@media (min-width: 992px) {
+    #contact {
+        padding-bottom: 200px;
+    }
+
+    #contact .maps iframe {
+        width: 100%;
+        height: 700px;
+    }
+}
